date-picker.scss
@import "../theme-chalk/src/date-picker.scss";

.el-date-editor {
  width: 100% !important;

  .el-input {
    @include el-input;
  }

  @apply tw-cursor-pointer;

  &.el-input__inner {
    &:hover:not(:focus) {
      @apply tw-bg-white;
    }
  }

  .el-range-separator {
    width: 26px;

    @apply tw-h-auto tw-align-middle;

    color: black;
  }

  &.el-range-editor--mini.el-input__inner {
    @apply tw-h-9 tw-z-10 tw-text-sm hover:tw-border-jb-grey-100 hover:tw-bg-jb-grey-hover;

    &:hover {
      >.el-range-input {
        @apply tw-border-jb-grey-100 tw-bg-jb-grey-hover;
      }
    }

    .el-range-input {
      @apply tw-text-sm;
    }
  }
}

@media (max-width: $--sm) {
  .el-date-range-picker {
    width: 254px;
    overflow: hidden;
  }
}

